<resources>
    <!--MainActivity-->
    <string name="app_name">Gestor de datos | I.E.S. El Rincón</string>
    <string name="loginTitle">Iniciar sesión:</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="rememberPass">Recordar contraseña</string>
    <string name="whiteBackground">Fondo blanco</string>
    <string name="originalBackground">Fondo original</string>

    <!--Errors-->

    <string name="errorEmptyUsername">Introduzca su nombre de usuario</string>
    <string name="errorInvalidUsername">Nombre inválido</string>
    <string name="errorEmptyPassword">Introduzca su contraseña</string>
    <string name="errorInvalidPassword">Contraseña inválida</string>
    <string name="errorClassroomConstraint">El aula introducida no existe</string>
    <string name="errorClassroomUnique">El aula introducida ya existe</string>
    <string name="errorClassroomUniqueUpdate">El aula que intenta modificar está siendo usado o la que intenta introducir ya existe</string>
    <string name="errorSubjectReference">El aula al que intenta referenciar no existe.</string>
    <string name="errorClassroomUsed">Debe borrar primero los registros que le hacen referencia.</string>

    <string name="toastErrorEmptyUsername">Introduzca un nombre de usuario</string>
    <string name="toastErrorShortUsername">Introduzca un nombre de usuario de al menos 4 caracteres</string>
    <string name="toastErrorName">Introduzca su nombre</string>
    <string name="toastErrorSurname">Introduzca su primer apellido</string>
    <string name="toastErrorSecondSurname">Introduzca su segundo apellido</string>
    <string name="toastErrorEmptyAge">Introduzca su edad</string>
    <string name="toastErrorInvalidAge">La edad debe estar comprendida entre 0 y 99</string>
    <string name="toastErrorNotIntAge">La edad introducida no es un número entero</string>
    <string name="toastErrorEmptyDNI">Introduzca su DNI</string>
    <string name="toastErrorShortDNI">El DNI está compuesto por 9 caracteres</string>
    <string name="toastErrorInvalidDNI">El DNI introducido no es válido</string>

    <string name="toastErrorEmptyGender">Introduzca su género</string>

    <string name="toastErrorEmptyMember">Introduzca si es alumno o docente</string>

    <string name="toastErrorEmptyActivationCode">Introduzca el código de activación</string>
    <string name="toastErrorInvalidActivationCode">El código de activación está compuesto por 4 caracteres</string>
    <string name="toastErrorEmptyNewPassword">Introduzca su contraseña</string>
    <string name="toastErrorInvalidNewPassword">Introduzca una contraseña de al menos 8 caracteres</string>
    <string name="toastErrorEmptyRepeatPassword">Introduzca de nuevo la contraseña</string>
    <string name="toastErrorInvalidRepeatPassword">Las contraseñas introducidas no coinciden</string>

    <!--SignUp-->
    <string name="name">Nombre</string>
    <string name="surname">Primer apellido</string>
    <string name="secondSurname">Segundo apellido</string>
    <string name="gender">Género</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="member">Miembro del</string>
    <string name="studentBody">Alumnado</string>
    <string name="teacherBody">Profesorado</string>
    <string name="age">Edad</string>
    <string name="dni">DNI</string>
    <string name="activationCode">Código de activación</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="continueTitle">Continuar</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="back">Volver</string>

    <!--CRUD-->
    <string name="insert">Insertar</string>
    <string name="delete">Borrar</string>
    <string name="update">Actualizar</string>
    <string name="consult">Consultar</string>
    <string name="consultClassrooms">Consultar aulas</string>
    <string name="consultSubjects">Consultar asignaturas</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Aulas</string>
    <string name="tab_text_2">Asignaturas</string>
    <string name="tab_text_3">Tutorías</string>
    <string name="tab_text_4">Tu centro</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nav_header_main_menu">nav_header_main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="title_activity_main_menu2">MainMenu2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="background">Fondo</string>

    <!--Menus-->
    <string name="home">Inicio</string>
    <string name="myProfile">Mi perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="closeApp">Cerrar aplicación</string>
    <string name="help">Ayuda</string>
    <string name="mainMenu">Menú principal</string>
    <string name="titleSections">Secciones</string>
    <string name="download">Descargar como PDF</string>

    <!--Help-->
    <string name="helpTitle">Ayuda</string>
    <string name="helpLogin">El nombre del usuario debe tener al menos 4 caracteres y la contraseña al menos 8.\n\nSi lo desea puede descargar las normas del centro haciendo click en el icono de la nube, al lado del icono de ayuda.</string>
    <string name="helpSignUpNick">El nombre del usuario debe tener al menos 4 caracteres.</string>
    <string name="helpSignUpPersonalData">Introduzca sus datos personales. En el campo edad debe introducir un número entero válido. El DNI será validado por lo que debe ser real.</string>
    <string name="helpSignUpGender">Debe elegir una opción de las alternativas.</string>
    <string name="helpSignUpTypeMember">Debe elegir una opción de las alternativas.</string>
    <string name="helpSignUpPassword">El código de activación consta de 4 dígitos. La contraseña debe contener al menos 8 caracteres.</string>
    <string name="helpMainMenu">Acceda a los diferentes apartados desde las pestañas o desde el panel lateral de navegación. Desde este último podrá también cerrar sesión.\n\nPara modificar o borrar un registro manténgalo seleccionado hasta que aparezcan las respectivas opciones en el action bar. Si desea añadir un nuevo registro selecione la opción que ya aparece en el action bar.\n\nTambién podrá descargar la tabla como JPG desde el icono de la nube. Además podrá hacer subconsultas haciendo click largo sobre un registro y eligiendo la opción de la flecha. Por último, en la sección tutorías, dispone de la posibilidad de buscar específicamente datos referentes al profesorado.</string>
    <string name="helpListClassrooms">Para modificar o borrar un registro manténgalo seleccionado hasta que aparezcan las respectivas opciones en el action bar. Para añadir un nuevo registro selecione la opción que ya aparece en el action bar.</string>
    <string name="helpListSubjects">Para modificar o borrar un registro manténgalo seleccionado hasta que aparezcan las respectivas opciones en el action bar. Para añadir un nuevo registro selecione la opción que ya aparece en el action bar.</string>
    <string name="helpListTutorships">Para modificar o borrar un registro manténgalo seleccionado hasta que aparezcan las respectivas opciones en el action bar. Para añadir un nuevo registro selecione la opción que ya aparece en el action bar.</string>
    <string name="helpFormListClassrooms">Asegúrese que los datos introducidos sean válidos.</string>
    <string name="helpFormListSubjects">Asegúrese que los datos introducidos sean válidos.</string>
    <string name="helpFormListTutorships">Asegúrese que los datos introducidos sean válidos.</string>
    <string name="helpMap">Haga un click sobre el mapa para hacer zoom sobre el marcador. Señale el marcador si desea ver el título.</string>

    <!--Fragments-->
    <string name="fragmentTextClassrooms">Mantenga actualizado el listado de aulas a las que asiste.</string>
    <string name="fragmentButtonClassrooms">Aulas</string>
    <string name="fragmentTextSubjects">Toda la información sobre sus asignaturas.</string>
    <string name="fragmentButtonSubjects">Asignaturas</string>
    <string name="fragmentTextTutorships">Añada, consulte, actualice y elimine toda la información acerca de sus tutorías.</string>
    <string name="fragmentButtonTutorships">Tutorías</string>

    <!--FormList-->
    <string name="titleClassrooms">Aulas</string>
    <string name="subject">Asignatura</string>
    <string name="details">Asignaturas</string>
    <string name="teacher">Docente</string>
    <string name="classroom">Nombre del aula</string>
    <string name="startTime">Hora de comienzo</string>
    <string name="endingTime">Hora de finalización</string>
    <string name="classroomID">ID del aula</string>
    <string name="teacherID">ID del profesor</string>
    <string name="errorEmptySubject">Introduzca el nombre de la asignatura</string>
    <string name="errorEmptyDetails">Introduzca el nombre de las asignaturas que se imparten en el aula</string>
    <string name="errorEmptyTeacher">Introduzca el nombre del docente</string>
    <string name="errorEmptyClassroom">Introduzca el nombre del aula</string>
    <string name="errorTime">La hora de comienzo debe ser anterior a la de finalización</string>
    <string name="errorImage">No se pudo guardar la imagen.</string>
    <string name="takePhoto">Sacar foto</string>
    <string name="uploadPhoto">Elegir de galería</string>
    <string name="deletePhoto">Borrar imagen</string>

    <!--Labels-->
    <string name="subjectLabel">Nombre de la asignatura: </string>
    <string name="teacherLabel">Docente: </string>
    <string name="classroomLabel">Nombre del aula: </string>
    <string name="startTimeLabel">Hora de comienzo: </string>
    <string name="endingTimeLabel">Hora de finalización: </string>

    <string name="titleSubjects">Asignaturas</string>
    <string name="titleTutorships">Tutorías</string>

    <!--List-->
    <string name="noData">Sin datos</string>
    <string name="loadingData">Cargando datos</string>
    <string name="title_activity_maps">Maps</string>

    <!--Map labels-->
    <string name="mySchool">Mi centro</string>

    <!--Downloads-->
    <string name="creatingPDF">Creando PDF</string>
    <string name="downloadRules">Descargar normas</string>
    <string name="downloadTable">Descargar como imagen</string>
    <string name="downloadingPDF">Descargando PDF</string>
    <string name="downloadingJPG">Descargando JPG</string>
    <string name="pdfSuccessful">Descarga completada</string>

    <!--JPG progressbar-->
    <string name="gettingMeasures">Calculando medidas de la tabla</string>
    <string name="creatingBitmap">Creando bitmap</string>
    <string name="creatingJPG">Creando JPG</string>
    <string name="jpgSuccessful">Descarga completada</string>

    <!--SubQueries-->
    <string name="errorNoSubjectRelated">No hay ninguna asignatura que se imparta en este aula</string>
    <string name="searchBox">Buscar</string>
    <string name="title_activity_maps2">Map</string>
</resources>
