<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_subquery_classrooms"
        android:orderInCategory="100"
        android:title="@string/consultSubjects"
        android:icon="@drawable/ic_menu_subquery"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/insert"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/update"
        android:icon="@drawable/ic_menu_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/downloadTable"
        android:icon="@drawable/ic_menu_download"
        app:showAsAction="always" />
</menu>
