<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.gestordedatos.gestordedatos.tutorships.FormListTutorships">

    <ImageView
        android:id="@+id/imageViewFondo"
        android:layout_width="349dp"
        android:layout_height="211dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorWhite" />

    <TextView
        android:id="@+id/textViewClassroom"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/classroom"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeacher" />

    <TextView
        android:id="@+id/textViewTeacher"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/teacher"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondo"
        app:layout_constraintTop_toTopOf="@+id/imageViewFondo" />

    <TextView
        android:id="@+id/textViewComienzo"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/startTime"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/textViewClassroom" />

    <TextView
        android:id="@+id/textViewFin"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/endingTime"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/textViewComienzo" />

    <EditText
        android:id="@+id/editTextTeacher"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondo"
        app:layout_constraintTop_toTopOf="@+id/imageViewFondo" />

    <EditText
        android:id="@+id/editTextClassroom"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacher" />

    <Spinner
        android:id="@+id/spinnerComienzo"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_border_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/editTextClassroom" />

    <Spinner
        android:id="@+id/spinnerFin"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/ic_border_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFondo"
        app:layout_constraintTop_toBottomOf="@+id/spinnerComienzo" />

</android.support.constraint.ConstraintLayout>
