<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toast_layout_loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.gestordedatos.gestordedatos.SignUpNick"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="410dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@color/colorWhite" />

        <Button
            android:id="@+id/buttonContinuar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_button"
            android:fontFamily="arial"
            android:shadowColor="@color/colorBlack"
            android:text="@string/continueTitle"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/buttonVolver" />

        <Button
            android:id="@+id/buttonVolver"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_button"
            android:fontFamily="arial"
            android:shadowColor="@color/colorBlack"
            android:text="Volver"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/buttonContinuar"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPrimerApellido"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextSegundoApellido"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/secondSurname"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/editTextPrimerApellido" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextSegundoApellido" />

    <EditText
            android:id="@+id/editTextDNI"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/textViewGenero"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/editTextEdad" />

    </android.support.constraint.ConstraintLayout>